# csv-sql

./: README.md  dev.py  main.py  notebook.py  pyproject.toml
__marimo__/session/: notebook.py.json
data/: customers.csv  customers1.csv  customers_resolved.csv  orders.csv  products.csv
